--- a/detail.html
+++ b/detail.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/detail.css">
 </head>
 <body>
@@ -48,8 +49,28 @@
     </header>
     <article>
         <div>
-            <div>
-                <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
+            <div id="slideshow-container">
+                <div id="carousel-controls" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner" id="carousel-parent">
+                        <div class="carousel-item active">
+                            <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="" class="carousel-image d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://media-cdn.tripadvisor.com/media/photo-o/01/fa/51/70/r-the-spa.jpg" alt="" class="carousel-image d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://media-cdn.tripadvisor.com/media/photo-w/0e/b2/64/3f/radisson-blu-plaza-delhi.jpg" alt="" class="carousel-image d-block w-100">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carousel-controls" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carousel-controls" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
             </div>
             <div id="booking-form">
                 <form action="payment.html" method="get" autocomplete="off">
@@ -91,7 +112,24 @@
             </div>
             <div>
                 <h5>RATING</h5>
-                <p>5 Star</p>
+                <span class="score">
+                    <div class="score-wrap">
+                        <span class="stars-active" style="width:100%">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                        </span>
+                        <span class="stars-inactive">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                        </span>
+                    </div>
+                </span>  
             </div>
             <div>
                 <h5>AMENITIES</h5>
@@ -104,8 +142,9 @@
                 </ul>
             </div>
             <div>
-            <h5>DESCRIPTION</h5>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum eligendi cum esse, reiciendis quo odio. Amet quibusdam quasi mollitia obcaecati modi similique tempore ab minus commodi. Libero alias reiciendis aspernatur!</p>
+                <h5>DESCRIPTION</h5>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum eligendi cum esse, reiciendis quo odio. Amet quibusdam quasi mollitia obcaecati modi similique tempore ab minus commodi. Libero alias reiciendis aspernatur!</p>
+            </div>
         </div>
     </article>
     <footer>
