--- a/detail.html
+++ b/detail.html
@@ -12,12 +12,12 @@
     <link rel="stylesheet" href="styles/detail.css">
 </head>
 <body>
-    <header>
-        <div id="logo">
-            <img src="/assests/images/logo.png" alt="logo" class="logo">
-        </div>
-        <div id="login">
-            <button type="button" class="btn btn-light btn-sm float-right align-middle" data-toggle="modal" data-backdrop="false" data-target="#login-modal">LOGIN</button>
+    <div class="main-container">
+        <header class="header-footer" id="header">
+            <a href="index.html" class="logo">
+                <img src="assests/images/logo.png" id="logo-image" alt="logo"/>
+            </a>
+            <button type="button" id="login" class="btn btn-light btn-sm" data-toggle="modal" data-backdrop="false" data-target="#login-modal" onclick="mainLogin(event)">LOGIN</button>
             <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="login-modal-label" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
@@ -45,145 +45,151 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </header>
-    <article>
-        <div>
-            <div id="slideshow-container">
-                <div id="carousel-controls" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner" id="carousel-parent">
-                        <div class="carousel-item active">
-                            <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="" class="carousel-image d-block w-100">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="https://media-cdn.tripadvisor.com/media/photo-o/01/fa/51/70/r-the-spa.jpg" alt="" class="carousel-image d-block w-100">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="https://media-cdn.tripadvisor.com/media/photo-w/0e/b2/64/3f/radisson-blu-plaza-delhi.jpg" alt="" class="carousel-image d-block w-100">
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carousel-controls" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carousel-controls" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-            </div>
-            <div id="booking-form">
-                <form action="payment.html" method="get" autocomplete="off">
-                    <div class="outer">
-                        <label for="adult">Adults:</label>
-                        <input class="inner" type="number" name="adult" id="adult" value="1" min="1" oninput="updatePrice()" required/>
-                    </div>
-
-                    <div class="outer">
-                        <label for="name">Name:</label>
-                        <input class="inner" type="text" name="name" id="name" required/>
-                    </div>
-
-                    <div class="outer">
-                        <label for="fromDate">From Date:</label>
-                        <input class="inner" type="date" name="fromDate" id="fromDate" oninput="updatePrice()" required/>
-                    </div>
-
-                    <div class="outer">
-                        <label for="toDate">To Date:</label>
-                        <input class="inner" type="date" name="toDate" id="toDate" oninput="updatePrice()" required/>
-                    </div>
-
-                    <div class="outer">
-                        <label for="price">Total:</label>
-                        <input class="inner" type="text" name="price" id="price" readonly/>
-                        <input class="inner" type="hidden" id="id" name="id">
-                    </div>
-
-                    <div>
-                        <input type="submit" class="btn btn-outline-success" value="Book Now" id="book-now"/>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <div id="detail">
+        </header>
+        <article>
             <div>
-                <h2>Radison Blu Hotel</h2>
-            </div>
-            <div>
-                <h5>RATING</h5>
-                <span class="score">
-                    <div class="score-wrap">
-                        <span class="stars-active" style="width:100%">
-                            <i class="fa fa-star" aria-hidden="true"></i>
-                            <i class="fa fa-star" aria-hidden="true"></i>
-                            <i class="fa fa-star" aria-hidden="true"></i>
-                            <i class="fa fa-star" aria-hidden="true"></i>
-                            <i class="fa fa-star" aria-hidden="true"></i>
-                        </span>
-                        <span class="stars-inactive">
-                            <i class="fa fa-star" aria-hidden="true"></i>
-                            <i class="fa fa-star" aria-hidden="true"></i>
-                            <i class="fa fa-star" aria-hidden="true"></i>
-                            <i class="fa fa-star" aria-hidden="true"></i>
-                            <i class="fa fa-star" aria-hidden="true"></i>
-                        </span>
-                    </div>
-                </span>  
-            </div>
-            <div>
-                <h5>AMENITIES</h5>
-                <ul>
-                    <li>Room Service</li>
-                    <li>Resturant</li>
-                    <li>Business center</li>
-                    <li>Fitness center</li>
-                    <li>Pool</li>
-                </ul>
-            </div>
-            <div>
-                <h5>DESCRIPTION</h5>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum eligendi cum esse, reiciendis quo odio. Amet quibusdam quasi mollitia obcaecati modi similique tempore ab minus commodi. Libero alias reiciendis aspernatur!</p>
-            </div>
-        </div>
-    </article>
-    <footer>
-        <div id="contact">
-            <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-backdrop="false" data-target="#contact-modal">Contact Us</button>
-            <div class="modal fade" id="contact-modal" tabindex="-1" role="dialog" aria-labelledby="contact-modal-label" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="contact-modal-label">Get in touch</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
+                <div id="slideshow-container">
+                    <div id="carousel-controls" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner" id="carousel-parent">
+                            <div class="carousel-item active">
+                                <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="" class="carousel-image d-block w-100">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="https://media-cdn.tripadvisor.com/media/photo-o/01/fa/51/70/r-the-spa.jpg" alt="" class="carousel-image d-block w-100">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="https://media-cdn.tripadvisor.com/media/photo-w/0e/b2/64/3f/radisson-blu-plaza-delhi.jpg" alt="" class="carousel-image d-block w-100">
+                            </div>
                         </div>
-                        <div class="modal-body">
-                            <form>
-                                <p>
-                                    Thank you for reaching out!!! <br>
-                                    Please enter you email and we will get back to you.
-                                </p>
-                                <label for="email">Email: </label>
-                                <input type="text" id="email" name="email" placeholder="Enter your email id" required>
-                            </form>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-primary" data-dismiss="modal">Sumbit</button>
-                        </div>
+                        <a class="carousel-control-prev" href="#carousel-controls" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carousel-controls" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
                 </div>
+                <div id="booking-form">
+                    <form action="payment.html" method="get" autocomplete="off">
+                        <div class="outer">
+                            <label for="adult">Adults:</label>
+                            <input class="inner" type="number" name="adult" id="adult" value="1" min="1" oninput="updatePrice()" required/>
+                        </div>
+
+                        <div class="outer">
+                            <label for="name">Name:</label>
+                            <input class="inner" type="text" name="name" id="name" required/>
+                        </div>
+
+                        <div class="outer">
+                            <label for="fromDate">From Date:</label>
+                            <input class="inner" type="date" name="fromDate" id="fromDate" oninput="updatePrice()" required/>
+                        </div>
+
+                        <div class="outer">
+                            <label for="toDate">To Date:</label>
+                            <input class="inner" type="date" name="toDate" id="toDate" oninput="updatePrice()" required/>
+                        </div>
+
+                        <div class="outer">
+                            <label for="price">Total:</label>
+                            <input class="inner" type="text" name="price" id="price" readonly/>
+                            <input class="inner" type="hidden" id="id" name="id">
+                        </div>
+
+                        <div>
+                            <input type="submit" class="btn btn-outline-success" value="Book Now" id="book-now"/>
+                        </div>
+                    </form>
+                </div>
             </div>
-        </div>
-        <div id="copy">
-            &copy 2020 ROOM SEARCH PVT. LTD.
-        </div>
-        <div id="media">
-            <a href="https://www.facebook.com" target="_blank"><img src="/assests/images/facebook.png" alt="" ></a>
-            <a href="https://www.instagram.com" target="_blank"><img src="/assests/images/instagram.png" alt=""></a>
-            <a href="https://twitter.com" target="_blank"><img src="/assests/images/twitter.png" alt=""></a>
-        </div>
-    </footer>
+            <div id="detail">
+                <div>
+                    <h2>Radison Blu Hotel</h2>
+                </div>
+                <div>
+                    <h5>RATING</h5>
+                    <span class="score">
+                        <div class="score-wrap">
+                            <span class="stars-active" style="width:100%">
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                            </span>
+                            <span class="stars-inactive">
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                            </span>
+                        </div>
+                    </span>  
+                </div>
+                <div>
+                    <h5>AMENITIES</h5>
+                    <ul>
+                        <li>Room Service</li>
+                        <li>Resturant</li>
+                        <li>Business center</li>
+                        <li>Fitness center</li>
+                        <li>Pool</li>
+                    </ul>
+                </div>
+                <div>
+                    <h5>DESCRIPTION</h5>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum eligendi cum esse, reiciendis quo odio. Amet quibusdam quasi mollitia obcaecati modi similique tempore ab minus commodi. Libero alias reiciendis aspernatur!</p>
+                </div>
+            </div>
+        </article>
+        <footer class="header-footer" id="footer">
+            <div id="contact">
+                <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-backdrop="false" data-target="#contact-modal">Contact Us</button>
+                <div class="modal fade" id="contact-modal" tabindex="-1" role="dialog" aria-labelledby="contact-modal-label" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="contact-modal-label">Get in touch</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <form>
+                                    <p>
+                                        Thank you for reaching out!!! <br>
+                                        Please enter you email and we will get back to you.
+                                    </p>
+                                    <label for="email">Email: </label>
+                                    <input type="text" id="email" name="email" placeholder="Enter your email id" required>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-primary" data-dismiss="modal">Sumbit</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="copyright-text">
+                © 2020 ROOM SEARCH PVT. LTD.
+            </div>
+            <div id="social-media-images">
+                <a href="https://www.facebook.com" target="_blank">
+                    <img src="assests/images/facebook.png" class="social-media-image">
+                </a>
+                <a href="https://www.instagram.com" target="_blank">
+                    <img src="assests/images/instagram.png" class="social-media-image">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="assests/images/twitter.png" class="social-media-image">
+                </a>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
