--- a/payment.html
+++ b/payment.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="styles/payment.css">
 </head>
 <body>
-    <header>
-        <div id="logo">
-            <img src="/assests/images/logo.png" alt="logo" class="logo">
-        </div>
-        <div id="login">
-            <button type="button" class="btn btn-light btn-sm float-right align-middle" data-toggle="modal" data-backdrop="false" data-target="#login-modal">LOGIN</button>
+    <div class="main-container">
+        <header class="header-footer" id="header">
+            <a href="index.html" class="logo">
+                <img src="assests/images/logo.png" id="logo-image" alt="logo"/>
+            </a>
+            <button type="button" id="login" class="btn btn-light btn-sm" data-toggle="modal" data-backdrop="false" data-target="#login-modal" onclick="mainLogin(event)">LOGIN</button>
             <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="login-modal-label" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
@@ -44,84 +44,90 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </header>
-    <article>
-        <div id="payment-container">
-            <div id="hotel-details">
-                <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" class="hotel-image" id="hotel-image" alt="hotel-image"> 
-                <div class="hotel-name-rating">
-                    <h2 id="hotel-name">Radison Blu Hotel</h2>
-                    <p id="ranking">#38 of 1,289 hotels in New Delhi</p>
-                    <p id="address">National Highway 8, New Delhi 110017 India</p>
+        </header>
+        <article>
+            <div id="payment-container">
+                <div id="hotel-details">
+                    <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" class="hotel-image" id="hotel-image" alt="hotel-image"> 
+                    <div class="hotel-name-rating">
+                        <h2 id="hotel-name">Radison Blu Hotel</h2>
+                        <p id="ranking">#38 of 1,289 hotels in New Delhi</p>
+                        <p id="address">National Highway 8, New Delhi 110017 India</p>
+                    </div>
+                </div>
+                <div id="customer-payment-details">
+                    <div id="customer-details">
+                        <p id="name">
+                            <label>Name:</label> <label>John Doe</label>
+                        </p> 
+                        <p id="adult">
+                            <label>Number of Adults:</label> <label>2</label>
+                        </p>
+                        <p id="from-date">
+                            <label>Check-in Date:</label> <label>06.06.2020</label>
+                        </p>
+                        <p id="to-date">
+                            <label>Check-out Date:</label> <label>08.06.2020</label>
+                        </p>
+                    </div>
+                    <div id="payment-details">
+                        <p id="tariff">
+                            <label>Tariff Breakdown:</label> <label>Rs 1000 * 2 Adults * 5 Nights</label>
+                        </p>
+                        <p id="amount">
+                            <label>Total Amount:</label> <label>Rs 10000</label>
+                        </p>
+                    </div>
+                    <button type="button" class="btn btn-success" id="pay-now" disabled>
+                        Pay Now 
+                    </button>
                 </div>
             </div>
-            <div id="customer-payment-details">
-                <div id="customer-details">
-                    <p id="name">
-                        <label>Name:</label> <label>John Doe</label>
-                    </p> 
-                    <p id="adult">
-                        <label>Number of Adults:</label> <label>2</label>
-                    </p>
-                    <p id="from-date">
-                        <label>Check-in Date:</label> <label>06.06.2020</label>
-                    </p>
-                    <p id="to-date">
-                        <label>Check-out Date:</label> <label>08.06.2020</label>
-                    </p>
-                </div>
-                <div id="payment-details">
-                    <p id="tariff">
-                        <label>Tariff Breakdown:</label> <label>Rs 1000 * 2 Adults * 5 Nights</label>
-                    </p>
-                    <p id="amount">
-                        <label>Total Amount:</label> <label>Rs 10000</label>
-                    </p>
-                </div>
-                <button type="button" class="btn btn-success" id="pay-now" disabled>
-                    Pay Now 
-                </button>
-            </div>
-        </div>
-    </article>
-    <footer>
-        <div id="contact">
-            <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-backdrop="false" data-target="#contact-modal">Contact Us</button>
-            <div class="modal fade" id="contact-modal" tabindex="-1" role="dialog" aria-labelledby="contact-modal-label" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="contact-modal-label">Get in touch</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            <form>
-                                <p>
-                                    Thank you for reaching out!!! <br>
-                                    Please enter you email and we will get back to you.
-                                </p>
-                                <label for="email">Email: </label>
-                                <input type="text" id="email" name="email" placeholder="Enter your email id" required>
-                            </form>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-primary" data-dismiss="modal">Sumbit</button>
+        </article>
+        <footer class="header-footer" id="footer">
+            <div id="contact">
+                <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-backdrop="false" data-target="#contact-modal">Contact Us</button>
+                <div class="modal fade" id="contact-modal" tabindex="-1" role="dialog" aria-labelledby="contact-modal-label" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="contact-modal-label">Get in touch</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <form>
+                                    <p>
+                                        Thank you for reaching out!!! <br>
+                                        Please enter you email and we will get back to you.
+                                    </p>
+                                    <label for="email">Email: </label>
+                                    <input type="text" id="email" name="email" placeholder="Enter your email id" required>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-primary" data-dismiss="modal">Sumbit</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div id="copy">
-            &copy 2020 ROOM SEARCH PVT. LTD.
-        </div>
-        <div id="media">
-            <a href="https://www.facebook.com" target="_blank"><img src="/assests/images/facebook.png" alt="" ></a>
-            <a href="https://www.instagram.com" target="_blank"><img src="/assests/images/instagram.png" alt=""></a>
-            <a href="https://twitter.com" target="_blank"><img src="/assests/images/twitter.png" alt=""></a>
-        </div>
-    </footer>
+            <div id="copyright-text">
+                © 2020 ROOM SEARCH PVT. LTD.
+            </div>
+            <div id="social-media-images">
+                <a href="https://www.facebook.com" target="_blank">
+                    <img src="assests/images/facebook.png" class="social-media-image">
+                </a>
+                <a href="https://www.instagram.com" target="_blank">
+                    <img src="assests/images/instagram.png" class="social-media-image">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="assests/images/twitter.png" class="social-media-image">
+                </a>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
